# xeger-cpp

./: CMakeLists.txt  README.md  vcpkg.json  vsSetupp.ps1  xegerCPP.cpp  xegerCPP.h
include/: xegerCPP.h
src/: test.cpp  xegerCPP.cpp
